# back/api/swagger.yaml
@@ -24,7 +24,6 @@ tags:
 
 
 schemes:
-- "https"
 - "http"
 
 
@@ -52,32 +51,32 @@ paths:
         405:
           description: "Invalid input"
 
-
-    put:
-      tags:
-      - "project"
-      summary: "Update an existing project"
-      description: ""
-      operationId: "updateProject"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: "Project object to be added"
-        required: true
-        schema:
-          $ref: "#/definitions/Project"
-      responses:
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Project not found"
-        405:
-          description: "Validation exception"
-
+    get:
+        tags:
+        - "project"
+        summary: "Get all projects"
+        description: "Returns all projects of the user"
+        operationId: "getAllProjects"
+        produces:
+        - "application/json"
+        parameters:
+        - name: "_id"
+          in: "query"
+          description: "ID of the user"
+          required: true
+          type: "integer"
+          format: "int64"
+        responses:
+          200:
+            description: "successful operation"
+            schema:
+              type: array
+              items:
+                $ref: "#/definitions/Project"
+          400:
+            description: "Invalid ID supplied"
+          404:
+            description: "Project not found"
 
   /project/{projectId}:
     get:
@@ -105,6 +104,36 @@ paths:
         404:
           description: "Project not found"
 
+    put:
+      tags:
+      - "project"
+      summary: "Update an existing project"
+      description: ""
+      operationId: "updateProject"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "projectId"
+        in: "path"
+        description: "Project id to update"
+        required: true
+        type: "integer"
+        format: "int64"
+      - in: "body"
+        name: "body"
+        description: "Project object to be added"
+        required: true
+        schema:
+          $ref: "#/definitions/Project"
+      responses:
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Project not found"
+        405:
+          description: "Validation exception"
 
     delete:
       tags:
@@ -247,7 +276,6 @@ paths:
       responses:
         default:
           description: "successful operation"
- 
 
 
   /project/{projectId}/agenda:
@@ -305,7 +333,7 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Events not found"
-      
+
 
   /project/{projectId}/agenda/{eventId}:
     get:
@@ -430,7 +458,7 @@ paths:
         description: "month of the events"
         required: true
         type: "integer"
-        format: "int64"  
+        format: "int64"
       responses:
         200:
           description: "successful operation"
@@ -442,8 +470,7 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Events not found"
-          
-        
+
   /project/{projectId}/discord:
     put:
       tags:
@@ -471,7 +498,7 @@ paths:
       responses:
         default:
           description: "successful operation"
-  
+
   /project/{projectId}/github:
     put:
       tags:
@@ -501,58 +528,6 @@ paths:
           description: "successful operation"
 
   /project/{projectId}/trello:
-    post:
-      tags:
-      - "trello"
-      summary: "Add a Trello reference"
-      description: "Add a Trello reference to the project"
-      operationId: "addTrello"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "projectId"
-        in: "path"
-        description: "ID of project the Trello reference is part of."
-        required: true
-        type: "integer"
-        format: "int64"
-      - in: "body"
-        name: "body"
-        description: "Created Trello reference"
-        required: true
-        schema:
-          $ref: "#/definitions/APIReference"
-      responses:
-        default:
-          description: "successful operation"
-    get:
-      tags:
-      - "trello"
-      summary: "Get Trello reference"
-      description: "Get Trello reference of the project"
-      operationId: "getTrello"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "projectId"
-        in: "path"
-        description: "ID of project the Trello reference is part of."
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/APIReference"
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Trello not found"
     put:
       tags:
       - "trello"
@@ -579,28 +554,7 @@ paths:
       responses:
         default:
           description: "successful operation"
-    delete:
-      tags:
-      - "trello"
-      summary: "Delete Trello reference"
-      description: "Delete Trello reference of the project"
-      operationId: "deleteTrello"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "projectId"
-        in: "path"
-        description: "ID of project the Trello reference is part of."
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        400:
-          description: "Invalid id supplied"
-        404:
-          description: "Trello not found"
+
   /project/{projectId}/contacts:
     post:
       tags:
@@ -897,7 +851,7 @@ paths:
           description: "Invalid id supplied"
         404:
           description: "Note not found"
-          
+
 definitions:
 
   User:
@@ -934,10 +888,20 @@ definitions:
         $ref: '#/definitions/APIReference'
       discord:
         $ref: '#/definitions/APIReference'
+      trello:
+        $ref: '#/definitions/APIReference'
       agendaEvents:
         type: array
         items:
           $ref: '#/definitions/AgendaEvent'
+      contacts:
+        type: array
+        items:
+          $ref: '#/definitions/Contact'
+      notes:
+        type: array
+        items:
+          $ref: '#/definitions/Note'
     xml:
       name: "Project"
 
